Edição da página Checklist do QA

--- a/05_Checklist_do_QA.html
+++ b/05_Checklist_do_QA.html
@@ -15,26 +15,19 @@
     <div id="content">
       <h1>Checklist do QA</h1>
       <div class="section-block">
-        <p>6 - Checklist do QA</p>
         <p>
           Esta página apresenta o checklist oficial que todos os analistas de QA
-          devem seguir ao trabalhar
+          devem seguir ao trabalhar com o Qase durante uma release quinzenal.
+          Ele garante padronização, reduz erros operacionais e assegura que o
+          WellnessQAReporter receba dados completos e consistentes.
         </p>
-        <p>
-          com o Qase durante uma release quinzenal. Ele garante padronização,
-          reduz erros operacionais
-        </p>
-        <p>
-          e assegura que o WellnessQAReporter receba dados completos e
-          consistentes.
-        </p>
-        <p>Objetivo:</p>
+        <h2>Objetivo:</h2>
         <p>
           Criar um guia simples, direto e obrigatório que assegure conformidade
           ao processo de QA e qualidade das informações registradas.
         </p>
-        <p>1. Checklist Antes da Execução</p>
-        <p>Antes de iniciar qualquer run:</p>
+        <h2>1. Checklist Antes da Execução</h2>
+        <p>Antes de iniciar qualquer test run:</p>
         <p>[ ] Suites revisadas e atualizadas</p>
         <p>
           [ ] Casos de teste completos (passos, pré-condições, resultado
@@ -48,7 +41,7 @@
         <p>[ ] Run criada para Android</p>
         <p>[ ] Nomenclatura correta das runs</p>
         <p>[ ] Ambiente validado e funcional</p>
-        <p>2. Checklist Durante a Execução</p>
+        <h2>2. Checklist Durante a Execução</h2>
         <p>Durante a execução dos casos de teste:</p>
         <p>[ ] Seguir exatamente os passos do case</p>
         <p>[ ] Registrar status de cada caso</p>
@@ -58,8 +51,8 @@
         <p>[ ] Garantir vínculo entre defeito e resultado da execução</p>
         <p>[ ] Justificar Blocked e Skipped de forma clara</p>
         <p>[ ] Atualizar severidade dos defeitos conforme impacto real</p>
-        <p>3. Checklist Após a Execução</p>
-        <p>Antes de encerrar a run:</p>
+        <h2>3. Checklist Após a Execução</h2>
+        <p>Antes de encerrar a test run:</p>
         <p>[ ] 100% dos casos com status</p>
         <p>[ ] Todos os Failed com defeitos vinculados</p>
         <p>[ ] Todas as evidências anexadas</p>
@@ -69,7 +62,7 @@
         <p>[ ] Duplicidade de defeitos verificada e corrigida</p>
         <p>[ ] Severidades revisadas pelo QA líder</p>
         <p>[ ] Run encerrada após validação final</p>
-        <p>4. Checklist Antes de Gerar o Relatório</p>
+        <h2>4. Checklist Antes de Gerar o Relatório</h2>
         <p>Para garantir KPIs corretos:</p>
         <p>[ ] Plan completo e atualizado</p>
         <p>[ ] Runs concluídas para ambas as plataformas</p>
@@ -77,7 +70,7 @@
         <p>[ ] Nenhum defeito sem vínculo</p>
         <p>[ ] Nenhum defeito sem descrição completa</p>
         <p>[ ] Suites e cases consistentes com o escopo da release</p>
-        <p>5. Erros Comuns que o Checklist Evita</p>
+        <h2>5. Erros Comuns que o Checklist Evita</h2>
         <p>❌ Executar runs com cases em branco</p>
         <p>❌ Esquecer evidências de falhas</p>
         <p>❌ Criar runs fora do padrão</p>
@@ -85,21 +78,20 @@
         <p>❌ Marcar Passed sem validar comportamento</p>
         <p>❌ Revisões tardias que forçam retrabalho</p>
         <p>❌ Confusão entre plataformas e idiomas</p>
-        <p>6. Benefícios do Checklist</p>
-        <p>• Padroniza a atuação dos QAs</p>
-        <p>• Reduz inconsistências entre projetos</p>
-        <p>• Melhora rastreabilidade dos dados</p>
-        <p>• Elimina erros simples que comprometem KPIs</p>
-        <p>• Aumenta confiabilidade dos relatórios executivos</p>
-        <p>• Sustenta a maturidade do processo de QA</p>
-        <p>Conclusão:</p>
+        <h2>6. Benefícios do Checklist</h2>
+        <ul>
+          <li>Padroniza a atuação dos QAs</li>
+          <li>Reduz inconsistências entre projetos</li>
+          <li>Melhora rastreabilidade dos dados</li>
+          <li>Elimina erros simples que comprometem KPIs</li>
+          <li>Aumenta confiabilidade dos relatórios executivos</li>
+          <li>Sustenta a maturidade do processo de QA</li>
+        </ul>
+        <h2>Conclusão:</h2>
         <p>
           O checklist é obrigatório. Ele assegura disciplina e consistência no
-          processo de QA, garantindo
-        </p>
-        <p>
-          que o WellnessQAReporter opere com dados confiáveis e gere análises
-          precisas para o time e gestão.
+          processo de QA, garantindo que o WellnessQAReporter opere com dados
+          confiáveis e gere análises precisas para o time e gestão.
         </p>
       </div>
       <p><a href="index.html">⬅ Voltar ao índice</a></p>
