--- a/06_Como_Reporter_Usa_Dados.html
+++ b/06_Como_Reporter_Usa_Dados.html
@@ -13,133 +13,149 @@
         .then((t) => (document.getElementById("sidebar").innerHTML = t));
     </script>
     <div id="content">
-      <h1>Como o Reporter usa os Dados</h1>
+      <h1>Como o Reporter usa os Dados do Qase</h1>
       <div class="section-block">
-        <p>7 - Como o WellnessQAReporter Usa os Dados do Qase</p>
         <p>
           Esta página explica exatamente como o WellnessQAReporter interpreta os
-          dados do Qase e por que a padronização
+          dados do Qase e por que a padronização é fundamental para garantir
+          relatórios corretos, KPIs precisos e visibilidade real sobre a
+          qualidade da release.
         </p>
-        <p>
-          é fundamental para garantir relatórios corretos, KPIs precisos e
-          visibilidade real sobre a qualidade da release.
-        </p>
-        <p>Objetivo:</p>
+        <h2>Objetivo:</h2>
         <p>
           Demonstrar a relação direta entre a qualidade das informações
-          registradas no Qase e a precisão dos relatórios
+          registradas no Qase e a precisão dos relatórios gerados pelo
+          WellnessQAReporter.
         </p>
-        <p>gerados pelo WellnessQAReporter.</p>
-        <p>1. O Papel do WellnessQAReporter</p>
+        <h2>1. O Papel do WellnessQAReporter</h2>
         <p>
           O WellnessQAReporter coleta automaticamente dados do Qase e transforma
           essas informações em:
         </p>
-        <p>• KPIs de escopo</p>
-        <p>• KPIs de cobertura</p>
-        <p>• KPIs de execução</p>
-        <p>• KPIs de falhas</p>
-        <p>• Métricas por funcionalidade</p>
-        <p>• Métricas por plataforma (iOS e Android)</p>
-        <p>• Métricas por idioma (PT/EN/ES)</p>
-        <p>• Análises de defeitos</p>
-        <p>• Resumo funcional</p>
-        <p>• Tendência por release</p>
+        <ul>
+          <li>KPIs de escopo</li>
+          <li>KPIs de cobertura</li>
+          <li>KPIs de execução</li>
+          <li>KPIs de falhas</li>
+          <li>Métricas por funcionalidade</li>
+          <li>Métricas por plataforma (iOS e Android)</li>
+          <li>Métricas por idioma (PT/EN/ES)</li>
+          <li>Análises de defeitos</li>
+          <li>Resumo funcional</li>
+          <li>Tendência por release</li>
+        </ul>
         <p>
           Cada resultado depende diretamente da forma como os QAs registram e
           organizam seus dados.
         </p>
-        <p>2. Como o Reporter Lê as Suites</p>
+        <h2>2. Como o Reporter Lê as Suites</h2>
         <p>
           O Reporter utiliza as Suites para identificar funcionalidades e
           módulos do aplicativo.
         </p>
         <p>Se as suites estiverem mal estruturadas:</p>
-        <p>• funcionalidades ficam misturadas</p>
-        <p>• KPIs por módulo tornam-se imprecisos</p>
-        <p>• relatórios perdem integridade</p>
+        <ul>
+          <li>funcionalidades ficam misturadas</li>
+          <li>KPIs por módulo tornam-se imprecisos</li>
+          <li>relatórios perdem integridade</li>
+        </ul>
         <p>Por isso as suites devem ser organizadas por funcionalidade.</p>
-        <p>3. Como o Reporter Lê os Cases</p>
+        <h2>3. Como o Reporter Lê os Test Cases</h2>
         <p>Os cases são utilizados para:</p>
-        <p>• identificar detalhes da funcionalidade</p>
-        <p>• calcular escopo planejado</p>
-        <p>• rastrear passos de falha</p>
-        <p>• classificar casos por idioma e plataforma</p>
+        <ul>
+          <li>identificar detalhes da funcionalidade</li>
+          <li>calcular escopo planejado</li>
+          <li>rastrear passos de falha</li>
+          <li>classificar casos por idioma e plataforma</li>
+        </ul>
         <p>Tags incorretas prejudicam os KPIs.</p>
-        <p>4. Como o Reporter Lê os Plans</p>
-        <p>O Plan determina o escopo total da release.</p>
-        <p>O Reporter usa o Plan para:</p>
-        <p>• contar o total de casos planejados</p>
-        <p>• calcular cobertura de teste</p>
-        <p>• comparar planejado vs executado</p>
+        <h2>4. Como o Reporter Lê os Test Plans</h2>
+        <p>O Test Plan determina o escopo total da release.</p>
+        <p>O Reporter usa o Test Plan para:</p>
+        <ul>
+          <li>contar o total de casos planejados</li>
+          <li>calcular cobertura de teste</li>
+          <li>comparar planejado vs executado</li>
+        </ul>
         <p>
-          Se o Plan estiver incompleto, todos os KPIs de escopo ficam errados.
+          Se o Test Plan estiver incompleto, todos os KPIs de escopo ficam
+          errados.
         </p>
-        <p>5. Como o Reporter Lê as Runs</p>
-        <p>As Runs são a base da execução real.</p>
-        <p>O Reporter utiliza as runs para calcular:</p>
-        <p>• percentual executado</p>
-        <p>• percentual aprovado</p>
-        <p>• taxa de falha</p>
-        <p>• progresso por plataforma</p>
-        <p>• histórico da execução</p>
+        <h2>5. Como o Reporter Lê as Test Runs</h2>
+        <p>As Test Runs são a base da execução real.</p>
+        <p>O Reporter utiliza as test runs para calcular:</p>
+        <ul>
+          <li>percentual executado</li>
+          <li>percentual aprovado</li>
+          <li>taxa de falha</li>
+          <li>progresso por plataforma</li>
+          <li>histórico da execução</li>
+        </ul>
         <p>
-          Runs incompletas (casos sem status, runs abandonadas) comprometem toda
-          a análise.
+          Test Runs incompletas (casos sem status, test runs abandonadas)
+          comprometem toda a análise.
         </p>
-        <p>6. Como o Reporter Lê os Resultados</p>
+        <h2>6. Como o Reporter Lê os Resultados</h2>
         <p>Os resultados (Passed, Failed, Blocked, Skipped) alimentam:</p>
-        <p>• taxa de sucesso</p>
-        <p>• taxa de falha</p>
-        <p>• análise de bloqueios</p>
-        <p>• testes inválidos (Skipped)</p>
-        <p>• qualidade geral da release</p>
+        <ul>
+          <li>taxa de sucesso</li>
+          <li>taxa de falha</li>
+          <li>análise de bloqueios</li>
+          <li>testes inválidos (Skipped)</li>
+          <li>qualidade geral da release</li>
+        </ul>
         <p>
           Comentários ausentes, evidências faltando e resultados vazios
           prejudicam todos esses indicadores.
         </p>
-        <p>7. Como o Reporter Lê os Defeitos</p>
+        <h2>7. Como o Reporter Lê os Defeitos</h2>
         <p>Os defeitos são usados para calcularem:</p>
-        <p>• defeitos por severidade</p>
-        <p>• defeitos por funcionalidade</p>
-        <p>• defeitos por plataforma</p>
-        <p>• taxa de falha por módulo</p>
-        <p>• defeitos por release</p>
-        <p>• reincidência</p>
+        <ul>
+          <li>defeitos por severidade</li>
+          <li>defeitos por funcionalidade</li>
+          <li>defeitos por plataforma</li>
+          <li>taxa de falha por módulo</li>
+          <li>defeitos por release</li>
+          <li>reincidência</li>
+        </ul>
         <p>
-          Quando defeitos não estão vinculados ao resultado da run, eles
+          Quando defeitos não estão vinculados ao resultado da test run, eles
           simplesmente desaparecem dos relatórios.
         </p>
-        <p>8. O que Acontece Quando os Dados Estão Incompletos</p>
+        <h2>8. O que Acontece Quando os Dados Estão Incompletos</h2>
         <p>Dados incorretos no Qase geram:</p>
-        <p>❌ KPIs inconsistentes</p>
-        <p>❌ falhas não contabilizadas</p>
-        <p>❌ funcionalidades sem rastreamento</p>
-        <p>❌ divergência entre projetos</p>
-        <p>❌ relatórios imprecisos</p>
+        <ul>
+          <li>❌ KPIs inconsistentes</li>
+          <li>❌ falhas não contabilizadas</li>
+          <li>❌ funcionalidades sem rastreamento</li>
+          <li>❌ divergência entre projetos</li>
+          <li>❌ relatórios imprecisos</li>
+        </ul>
         <p>
           O Reporter não &quot;adivinha&quot; dados — ele usa exatamente o que
           está no Qase.
         </p>
-        <p>9. Garantindo KPIs Confiáveis</p>
+        <h2>9. Garantindo KPIs Confiáveis</h2>
         <p>Para que o Reporter entregue dados 100% confiáveis, é necessário:</p>
-        <p>• suites padronizadas</p>
-        <p>• plans completos</p>
-        <p>• runs executadas corretamente</p>
-        <p>• todos os casos com status</p>
-        <p>• defeitos vinculados e completos</p>
-        <p>• evidências disponíveis</p>
-        <p>• severidades revisadas</p>
-        <p>Conclusão:</p>
+        <ul>
+          <li>suites padronizadas</li>
+          <li>test plans completos</li>
+          <li>test runs executadas corretamente</li>
+          <li>todos os casos com status</li>
+          <li>defeitos vinculados e completos</li>
+          <li>evidências disponíveis</li>
+          <li>severidades revisadas</li>
+        </ul>
+        <h2>Conclusão:</h2>
         <p>
           A qualidade do WellnessQAReporter é proporcional à qualidade dos dados
           registrados no Qase.
         </p>
         <p>
           Quando o processo é seguido corretamente, os relatórios se tornam uma
-          ferramenta poderosa para gestão,
+          ferramenta poderosa para gestão, decisão executiva e melhoria contínua
+          da qualidade.
         </p>
-        <p>decisão executiva e melhoria contínua da qualidade.</p>
       </div>
       <p><a href="index.html">⬅ Voltar ao índice</a></p>
     </div>
