Complemento das edições de Treinamento e padronização e Melorias contínuas

--- a/08_Melhorias_Continuas.html
+++ b/08_Melhorias_Continuas.html
@@ -15,119 +15,132 @@
     <div id="content">
       <h1>Melhorias Contínuas</h1>
       <div class="section-block">
-        <p>9 - Melhorias Contínuas</p>
         <p>
           Esta página define as práticas de melhoria contínua necessárias para
-          garantir que o processo de QA,
+          garantir que o processo de QA, a utilização do Qase e os dados
+          enviados ao WellnessQAReporter evoluam de forma consistente ao longo
+          das releases.
         </p>
-        <p>
-          a utilização do Qase e os dados enviados ao WellnessQAReporter evoluam
-          de forma consistente ao longo das releases.
-        </p>
-        <p>Objetivo:</p>
+        <h2>Objetivo:</h2>
         <p>
           Criar uma cultura de aperfeiçoamento constante, garantindo que o
-          processo não se degrade com o tempo,
+          processo não se degrade com o tempo, mantendo a disciplina e elevando
+          a maturidade do time de QA em todos os projetos.
         </p>
-        <p>
-          mantendo a disciplina e elevando a maturidade do time de QA em todos
-          os projetos.
-        </p>
-        <p>1. Por que Melhorias Contínuas são Necessárias?</p>
+        <h2>1. Por que Melhorias Contínuas são Necessárias?</h2>
         <p>Mesmo com processos definidos, é comum que:</p>
-        <p>• boas práticas se percam ao longo do tempo</p>
-        <p>• novas pessoas entrem sem o treinamento adequado</p>
-        <p>• detalhes de processos sejam esquecidos</p>
-        <p>• padrões deixem de ser seguidos</p>
-        <p>• pressões de prazo comprometam a qualidade do registro de dados</p>
+        <ul>
+          <li>boas práticas se percam ao longo do tempo</li>
+          <li>novas pessoas entrem sem o treinamento adequado</li>
+          <li>detalhes de processos sejam esquecidos</li>
+          <li>padrões deixem de ser seguidos</li>
+          <li>
+            pressões de prazo comprometam a qualidade do registro de dados
+          </li>
+        </ul>
         <p>Somente com revisões recorrentes o processo se mantém saudável.</p>
-        <p>2. Auditorias Periódicas no Qase</p>
+        <h2>2. Auditorias Periódicas no Qase</h2>
         <p>Recomenda-se auditorias nas seguintes áreas:</p>
-        <p>• Suites desatualizadas</p>
-        <p>• Cases sem tags de plataforma e idioma</p>
-        <p>• Runs incompletas</p>
-        <p>• Casos sem status</p>
-        <p>• Defeitos sem vínculo</p>
-        <p>• Defeitos duplicados</p>
-        <p>• Erros de nomenclatura</p>
-        <p>• Plans incompletos</p>
+        <ul>
+          <li>Suites desatualizadas</li>
+          <li>Cases sem tags de plataforma e idioma</li>
+          <li>Runs incompletas</li>
+          <li>Casos sem status</li>
+          <li>Defeitos sem vínculo</li>
+          <li>Defeitos duplicados</li>
+          <li>Erros de nomenclatura</li>
+          <li>Plans incompletos</li>
+        </ul>
         <p>As auditorias devem ocorrer ao menos uma vez por mês.</p>
-        <p>3. Análise de Métricas de Qualidade</p>
+        <h2>3. Análise de Métricas de Qualidade</h2>
         <p>
           Os relatórios do WellnessQAReporter devem ser usados para identificar:
         </p>
-        <p>• aumento de falhas recorrentes</p>
-        <p>• módulos mais problemáticos</p>
-        <p>• baixa cobertura de teste</p>
-        <p>• inconsistência entre plataformas</p>
-        <p>• defeitos reincidentes</p>
-        <p>• regressões constantes</p>
+        <ul>
+          <li>aumento de falhas recorrentes</li>
+          <li>módulos mais problemáticos</li>
+          <li>baixa cobertura de teste</li>
+          <li>inconsistência entre plataformas</li>
+          <li>defeitos reincidentes</li>
+          <li>regressões constantes</li>
+        </ul>
         <p>Esses pontos devem gerar ações de melhoria.</p>
-        <p>4. Reuniões de Retrospectiva de QA</p>
+        <h2>4. Reuniões de Retrospectiva de QA</h2>
         <p>Ao final de cada release quinzenal, recomenda-se:</p>
-        <p>• discutir erros cometidos na utilização do Qase</p>
-        <p>• identificar lacunas no processo</p>
-        <p>• revisar qualidade dos registros</p>
-        <p>• analisar tendências de defeitos</p>
-        <p>• propor ações concretas de melhoria</p>
+        <ul>
+          <li>discutir erros cometidos na utilização do Qase</li>
+          <li>identificar lacunas no processo</li>
+          <li>revisar qualidade dos registros</li>
+          <li>analisar tendências de defeitos</li>
+          <li>propor ações concretas de melhoria</li>
+        </ul>
         <p>
           Essas reuniões não substituem a retrospectiva geral da squad — elas
           são focadas exclusivamente no processo de QA.
         </p>
-        <p>5. Evolução das Suites e Cases</p>
+        <h2>5. Evolução das Suites e Cases</h2>
         <p>Para garantir maturidade:</p>
-        <p>• revisar cases de cenários de uso reais</p>
-        <p>• atualizar casos de teste quando funcionalidades mudarem</p>
-        <p>• remover testes redundantes</p>
-        <p>• adicionar novos casos quando surgirem novos fluxos</p>
-        <p>• revisar clareza e completude dos passos</p>
+        <ul>
+          <li>revisar cases de cenários de uso reais</li>
+          <li>atualizar casos de teste quando funcionalidades mudarem</li>
+          <li>remover testes redundantes</li>
+          <li>adicionar novos casos quando surgirem novos fluxos</li>
+          <li>revisar clareza e completude dos passos</li>
+        </ul>
         <p>Suites estáticas geram KPIs falsos e mascaram problemas.</p>
-        <p>6. Melhoria do Registro de Defeitos</p>
+        <h2>6. Melhoria do Registro de Defeitos</h2>
         <p>A cada ciclo, revisar:</p>
-        <p>• severidade aplicada</p>
-        <p>• clareza dos passos</p>
-        <p>• qualidade das evidências</p>
-        <p>• padrões de descrição</p>
-        <p>• duplicidades</p>
-        <p>• categorias funcionais</p>
+        <ul>
+          <li>severidade aplicada</li>
+          <li>clareza dos passos</li>
+          <li>qualidade das evidências</li>
+          <li>padrões de descrição</li>
+          <li>duplicidades</li>
+          <li>categorias funcionais</li>
+        </ul>
         <p>Boa governança gera relatórios mais precisos.</p>
-        <p>7. Atualização de Treinamentos</p>
+        <h2>7. Atualização de Treinamentos</h2>
         <p>Sempre que houver mudanças no processo:</p>
-        <p>• atualizar documentos</p>
-        <p>• atualizar esta documentação no Confluence</p>
-        <p>• revisar vídeos e materiais</p>
-        <p>• treinar novos colaboradores</p>
-        <p>• reforçar padrões com os analistas</p>
+        <ul>
+          <li>atualizar documentos</li>
+          <li>atualizar esta documentação no Confluence</li>
+          <li>revisar vídeos e materiais</li>
+          <li>treinar novos colaboradores</li>
+          <li>reforçar padrões com os analistas</li>
+        </ul>
         <p>A cada trimestre, recomenda-se um treinamento de reforço.</p>
-        <p>8. Monitoramento da Aderência ao Processo</p>
+        <h2>8. Monitoramento da Aderência ao Processo</h2>
         <p>O líder de QA deve acompanhar:</p>
-        <p>• índice de runs 100% completas</p>
-        <p>• percentual de defeitos com vínculo</p>
-        <p>• taxa de casos sem status</p>
-        <p>• quantidade de bloqueios justificáveis</p>
-        <p>• maturidade da descrição dos defeitos</p>
+        <ul>
+          <li>índice de runs 100% completas</li>
+          <li>percentual de defeitos com vínculo</li>
+          <li>taxa de casos sem status</li>
+          <li>quantidade de bloqueios justificáveis</li>
+          <li>maturidade da descrição dos defeitos</li>
+        </ul>
         <p>
           Indicadores ruins apontam falhas de processo, não apenas falhas
           técnicas.
         </p>
-        <p>9. Registro de Lições Aprendidas</p>
+        <h2>9. Registro de Lições Aprendidas</h2>
         <p>Manter um histórico com:</p>
-        <p>• o que funcionou bem</p>
-        <p>• o que precisa melhorar</p>
-        <p>• padrões que precisam ser reforçados</p>
-        <p>• práticas que devem ser excluídas</p>
-        <p>• riscos identificados</p>
+        <ul>
+          <li>o que funcionou bem</li>
+          <li>o que precisa melhorar</li>
+          <li>padrões que precisam ser reforçados</li>
+          <li>práticas que devem ser excluídas</li>
+          <li>riscos identificados</li>
+        </ul>
         <p>Isso ajuda a evolução da equipe e garante consistência.</p>
-        <p>Conclusão:</p>
+        <h2>Conclusão:</h2>
         <p>
           A melhoria contínua garante que o processo de QA permaneça saudável,
           disciplinado e maduro.
         </p>
         <p>
           É um ciclo permanente, que fortalece a qualidade dos dados no Qase e
-          eleva a confiança nas análises
+          eleva a confiança nas análises geradas pelo WellnessQAReporter.
         </p>
-        <p>geradas pelo WellnessQAReporter.</p>
       </div>
       <p><a href="index.html">⬅ Voltar ao índice</a></p>
     </div>
