Descrição dos KPIs

--- a/kpis.html
+++ b/kpis.html
@@ -22,49 +22,71 @@
         <ul>
           <li>
             <strong
-              >Escopo – Número total de casos planejados para release</strong
+              ><a href="KPI _Escopo_da_Release.html"
+                >Escopo – Número total de casos planejados para release</a
+              ></strong
             >
             <br />
             <em>Descrição:</em> Quantidade total de casos de teste planejados
             para a release.
           </li>
           <li>
-            <strong>Cobertura de testes</strong>
+            <strong
+              ><a href="KPI_Cobertura_da_Release.html"
+                >Cobertura de testes</a
+              ></strong
+            >
             <br />
             <em>Descrição:</em> Percentual de casos manuais e automatizados em
             relação ao escopo planejado.
           </li>
           <li>
-            <strong
-              >Execução – Número total de casos executados por status</strong
+            <strong>
+              <a href="KPI_Resultados_da_Release.html"
+                >Execução – Número total de casos executados por status</a
+              ></strong
             >
             <br />
             <em>Descrição:</em> Distribuição de execuções por status (Passed,
             Failed, Blocked, Skipped, etc.).
           </li>
           <li>
-            <strong>Tempo médio de execução</strong>
+            <strong
+              ><a href="KPI_Tempo_Medio_Execucao.html"
+                >Tempo médio de execução</a
+              ></strong
+            >
             <br />
             <em>Descrição:</em> Tempo médio de execução dos casos de teste da
             release.
           </li>
           <li>
-            <strong>Estabilidade (% de falhas) – por motivo</strong>
+            <strong
+              ><a href="KPI_Estabilidade_Falhas.html"
+                >Estabilidade (% de falhas) – por motivo</a
+              ></strong
+            >
             <br />
             <em>Descrição:</em> Percentual de falhas classificadas por motivo
             (defeito, script, ambiente, dados etc.).
           </li>
           <li>
             <strong
-              >Defeitos – Número total de defeitos por feature, status e
-              severidade</strong
+              ><a href="KPI_Defeitos_Por_Feature_Status_Severidade.html"
+                >Defeitos – Número total de defeitos por feature, status e
+                severidade</a
+              ></strong
             >
             <br />
             <em>Descrição:</em> Quantidade de defeitos encontrados na release,
             classificados por funcionalidade, status e severidade.
           </li>
           <li>
-            <strong>Tempo médio de resolução de defeitos</strong>
+            <strong
+              ><a href="KPI_Tempo_Medio_Resolucao_Defeitos.html"
+                >Tempo médio de resolução de defeitos</a
+              ></strong
+            >
             <br />
             <em>Descrição:</em> Tempo médio entre a abertura e o fechamento dos
             defeitos da release.
@@ -74,39 +96,61 @@
         <h2>KPIs para Visão Estratégica</h2>
         <ul>
           <li>
-            <strong>Produtividade – Número de execuções x tempo / mês</strong>
+            <strong>
+              <a href="KPI_Produtividade_Execucoes_Tempo.html"
+                >Produtividade – Número de execuções x tempo / mês</a
+              ></strong
+            >
             <br />
             <em>Descrição:</em> Volume de execuções mensais, segmentado por tipo
             de teste (manual e automatizado).
           </li>
           <li>
-            <strong>Esforço economizado</strong>
+            <strong
+              ><a href="KPI_Esforco_Economizado.html"
+                >Esforço economizado</a
+              ></strong
+            >
             <br />
             <em>Descrição:</em> Tempo total economizado com automação, com base
             no tempo médio de execução manual.
           </li>
           <li>
-            <strong>Eficiência operacional – Tempo médio de entregas</strong>
+            <strong
+              ><a href="KPI_Eficiencia_Operacional_Tempo_Medio_Entregas.html"
+                >Eficiência operacional – Tempo médio de entregas</a
+              ></strong
+            >
             <br />
             <em>Descrição:</em> Tempo médio de entrega de releases (do início ao
             fim do ciclo).
           </li>
           <li>
             <strong
-              >Prevenção de falhas – Defeitos detectados antes de PRD</strong
+              ><a href="KPI_Prevencao_de_Falhas.html"
+                >Prevenção de falhas – Defeitos detectados antes de PRD</a
+              ></strong
             >
             <br />
             <em>Descrição:</em> Percentual de defeitos encontrados em ambientes
             anteriores à produção.
           </li>
           <li>
-            <strong>Curva de evolução – % cobertura mapeada x entregue</strong>
+            <strong
+              ><a href="KPI_Curva_de_Evolucao.html"
+                >Curva de evolução – % cobertura mapeada x entregue</a
+              ></strong
+            >
             <br />
             <em>Descrição:</em> Relação entre a cobertura de testes planejada e
             a efetivamente executada ao longo do tempo.
           </li>
           <li>
-            <strong>Indicador de estabilidade – % de testes estáveis</strong>
+            <strong
+              ><a href="KPI_Indicador_de_Estabilidade.html"
+                >Indicador de estabilidade – % de testes estáveis</a
+              ></strong
+            >
             <br />
             <em>Descrição:</em> Percentual de testes considerados estáveis (sem
             falhas intermitentes ao longo dos ciclos).
